--- a/2021.html
+++ b/2021.html
@@ -16,7 +16,7 @@
     <div class="col-lg-auto">
 
         <h1>日本所属の言語処理論文被引用数ランキング (2021年)</h1>
-        <p class="text-right">最終更新: 2022-04-16 15:51:39.176395+09:00</p>
+        <p class="text-right">最終更新: 2022-04-16 16:05:31.790021+09:00</p>
 
         <div>
             <p>日本の組織を所属とする者が、2021年に言語処理のトップカンファレンスもしくはトップ論文誌で発表した論文一覧です (<a href="2021.html">2021年版</a>、<a
@@ -321,13 +321,13 @@
                     <tr>
                         <td style="vertical-align: middle;">0.0</td>
                         <td style="vertical-align: middle;">0.0</td>
-                        <td style="vertical-align: middle;">JST</td>
+                        <td style="vertical-align: middle;">甲南大</td>
                     </tr>
                 
                     <tr>
                         <td style="vertical-align: middle;">0.0</td>
                         <td style="vertical-align: middle;">0.0</td>
-                        <td style="vertical-align: middle;">甲南大</td>
+                        <td style="vertical-align: middle;">JST</td>
                     </tr>
                 
                 </tbody>
@@ -371,7 +371,7 @@
                     <tr>
                         <td style="vertical-align: middle;">18</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Ikuya Yamada (理研; Studio Ousia)<br> Akari Asai (ワシントン大)<br> Hannaneh Hajishirzi (Allen Institute for AI; ワシントン大)<br>
+                        <td style="vertical-align: middle;"> Ikuya Yamada (Studio Ousia; 理研)<br> Akari Asai (ワシントン大)<br> Hannaneh Hajishirzi (ワシントン大; Allen Institute for AI)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://aclanthology.org/2021.acl-short.123/">Efficient Passage Retrieval with Hashing for Open-domain Question Answering</a></td>
                     </tr>
@@ -387,7 +387,7 @@
                     <tr>
                         <td style="vertical-align: middle;">15</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Masahiro Kaneko (都立大)<br> Danushka Bollegala (リバプール大; Amazon)<br>
+                        <td style="vertical-align: middle;"> Masahiro Kaneko (都立大)<br> Danushka Bollegala (Amazon; リバプール大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/2021.eacl-main.107/">Debiasing Pre-trained Contextualised Embeddings</a></td>
                     </tr>
@@ -435,7 +435,7 @@
                     <tr>
                         <td style="vertical-align: middle;">6</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Masahiro Kaneko (都立大)<br> Danushka Bollegala (リバプール大; Amazon)<br>
+                        <td style="vertical-align: middle;"> Masahiro Kaneko (都立大)<br> Danushka Bollegala (Amazon; リバプール大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/2021.eacl-main.16/">Dictionary-based Debiasing of Pre-trained Word Embeddings</a></td>
                     </tr>
@@ -459,7 +459,7 @@
                     <tr>
                         <td style="vertical-align: middle;">6</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Lya Hulliyyatus Suadaa (東工大)<br> Hidetaka Kamigaito (東工大)<br> Kotaro Funakoshi (東工大)<br> Manabu Okumura (東工大)<br> Hiroya Takamura (東工大; 産総研)<br>
+                        <td style="vertical-align: middle;"> Lya Hulliyyatus Suadaa (東工大)<br> Hidetaka Kamigaito (東工大)<br> Kotaro Funakoshi (東工大)<br> Manabu Okumura (東工大)<br> Hiroya Takamura (産総研; 東工大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://aclanthology.org/2021.acl-long.115/">Towards Table-to-Text Generation with Numerical Reasoning</a></td>
                     </tr>
@@ -475,7 +475,7 @@
                     <tr>
                         <td style="vertical-align: middle;">5</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Fenia Christopoulou (マンチェスター大)<br> Makoto Miwa (豊田工大; 産総研)<br> Sophia Ananiadou (マンチェスター大)<br>
+                        <td style="vertical-align: middle;"> Fenia Christopoulou (マンチェスター大)<br> Makoto Miwa (産総研; 豊田工大)<br> Sophia Ananiadou (マンチェスター大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://aclanthology.org/2021.naacl-main.2/">Distantly Supervised Relation Extraction with Sentence Reconstruction and Knowledge Base Priors</a></td>
                     </tr>
@@ -483,7 +483,7 @@
                     <tr>
                         <td style="vertical-align: middle;">5</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Rob van der Goot (ITU)<br> Ibrahim Sharaf (Factmata)<br> Aizhan Imankulova (都立大)<br> Ahmet Üstün (フローニンゲン大)<br> Marija Stepanović (ITU)<br> Alan Ramponi (トレント大; COSBI)<br> Siti Oryza Khairunnisa (都立大)<br> Mamoru Komachi (都立大)<br> Barbara Plank (ITU)<br>
+                        <td style="vertical-align: middle;"> Rob van der Goot (ITU)<br> Ibrahim Sharaf (Factmata)<br> Aizhan Imankulova (都立大)<br> Ahmet Üstün (フローニンゲン大)<br> Marija Stepanović (ITU)<br> Alan Ramponi (COSBI; トレント大)<br> Siti Oryza Khairunnisa (都立大)<br> Mamoru Komachi (都立大)<br> Barbara Plank (ITU)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://aclanthology.org/2021.naacl-main.197/">From Masked Language Modeling to Translation: Non-English Auxiliary Tasks Improve Zero-shot Spoken Language Understanding</a></td>
                     </tr>
@@ -491,7 +491,7 @@
                     <tr>
                         <td style="vertical-align: middle;">5</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Haipeng Sun (ハルピン工業大; JD)<br> Rui Wang (上海交通大)<br> Kehai Chen (NICT)<br> Masao Utiyama (NICT)<br> Eiichiro Sumita (NICT)<br> Tiejun Zhao (ハルピン工業大)<br>
+                        <td style="vertical-align: middle;"> Haipeng Sun (JD; ハルピン工業大)<br> Rui Wang (上海交通大)<br> Kehai Chen (NICT)<br> Masao Utiyama (NICT)<br> Eiichiro Sumita (NICT)<br> Tiejun Zhao (ハルピン工業大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://aclanthology.org/2021.naacl-main.311/">Self-Training for Unsupervised Neural Machine Translation in Unbalanced Training Data Scenarios</a></td>
                     </tr>
@@ -523,7 +523,7 @@
                     <tr>
                         <td style="vertical-align: middle;">3</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Danushka Bollegala (リバプール大; Amazon)<br> Huda Hakami (ターイフ大)<br> Yuichi Yoshida (NII)<br> Ken-ichi Kawarabayashi (NII)<br>
+                        <td style="vertical-align: middle;"> Danushka Bollegala (Amazon; リバプール大)<br> Huda Hakami (ターイフ大)<br> Yuichi Yoshida (NII)<br> Ken-ichi Kawarabayashi (NII)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/2021.eacl-main.133/">RelWalk - A Latent Variable Model Approach to Knowledge Graph Embedding</a></td>
                     </tr>
@@ -579,7 +579,7 @@
                     <tr>
                         <td style="vertical-align: middle;">2</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Ukyo Honda (理研; NAIST)<br> Yoshitaka Ushiku (オムロン サイニックエックス)<br> Atsushi Hashimoto (オムロン サイニックエックス)<br> Taro Watanabe (NAIST)<br> Yuji Matsumoto (理研)<br>
+                        <td style="vertical-align: middle;"> Ukyo Honda (NAIST; 理研)<br> Yoshitaka Ushiku (オムロン サイニックエックス)<br> Atsushi Hashimoto (オムロン サイニックエックス)<br> Taro Watanabe (NAIST)<br> Yuji Matsumoto (理研)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/2021.eacl-main.323/">Removing Word-Level Spurious Alignment between Images and Pseudo-Captions in Unsupervised Image Captioning</a></td>
                     </tr>
@@ -635,7 +635,7 @@
                     <tr>
                         <td style="vertical-align: middle;">2</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Zhiwei Zhang (杭州電子大; 山梨大)<br> Jiyi Li (山梨大)<br> Fumiyo Fukumoto (山梨大)<br> Yanming Ye (杭州電子大)<br>
+                        <td style="vertical-align: middle;"> Zhiwei Zhang (山梨大; 杭州電子大)<br> Jiyi Li (山梨大)<br> Fumiyo Fukumoto (山梨大)<br> Yanming Ye (杭州電子大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://aclanthology.org/2021.emnlp-main.290/">Abstract, Rationale, Stance: A Joint Model for Scientific Claim Verification</a></td>
                     </tr>
@@ -651,7 +651,7 @@
                     <tr>
                         <td style="vertical-align: middle;">1</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Ryuji Kano (富士ゼロックス; 東工大)<br> Takumi Takahashi (富士ゼロックス)<br> Toru Nishino (富士ゼロックス)<br> Motoki Taniguchi (富士ゼロックス)<br> Tomoki Taniguchi (富士ゼロックス)<br> Tomoko Ohkuma (富士ゼロックス)<br>
+                        <td style="vertical-align: middle;"> Ryuji Kano (東工大; 富士ゼロックス)<br> Takumi Takahashi (富士ゼロックス)<br> Toru Nishino (富士ゼロックス)<br> Motoki Taniguchi (富士ゼロックス)<br> Tomoki Taniguchi (富士ゼロックス)<br> Tomoko Ohkuma (富士ゼロックス)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/2021.eacl-main.119/">Quantifying Appropriateness of Summarization Data for Curriculum Learning</a></td>
                     </tr>
@@ -659,7 +659,7 @@
                     <tr>
                         <td style="vertical-align: middle;">1</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Soichiro Murakami (東工大)<br> Sora Tanaka (東工大)<br> Masatsugu Hangyo (ウェザーニューズ)<br> Hidetaka Kamigaito (東工大)<br> Kotaro Funakoshi (東工大)<br> Hiroya Takamura (東工大; 産総研)<br> Manabu Okumura (東工大)<br>
+                        <td style="vertical-align: middle;"> Soichiro Murakami (東工大)<br> Sora Tanaka (東工大)<br> Masatsugu Hangyo (ウェザーニューズ)<br> Hidetaka Kamigaito (東工大)<br> Kotaro Funakoshi (東工大)<br> Hiroya Takamura (産総研; 東工大)<br> Manabu Okumura (東工大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/2021.eacl-main.125/">Generating Weather Comments from Meteorological Simulations</a></td>
                     </tr>
@@ -723,7 +723,7 @@
                     <tr>
                         <td style="vertical-align: middle;">1</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Shohei Higashiyama (NICT; NAIST)<br> Masao Utiyama (NICT)<br> Taro Watanabe (NAIST)<br> Eiichiro Sumita (NICT)<br>
+                        <td style="vertical-align: middle;"> Shohei Higashiyama (NAIST; NICT)<br> Masao Utiyama (NICT)<br> Taro Watanabe (NAIST)<br> Eiichiro Sumita (NICT)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://aclanthology.org/2021.naacl-main.438/">User-Generated Text Corpus for Evaluating Japanese Morphological Analysis and Lexical Normalization</a></td>
                     </tr>
@@ -811,7 +811,7 @@
                     <tr>
                         <td style="vertical-align: middle;">1</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Ryuto Konno (リクルート)<br> Shun Kiyono (東北大; 理研)<br> Yuichiroh Matsubayashi (東北大; 理研)<br> Hiroki Ouchi (理研; NAIST)<br> Kentaro Inui (東北大; 理研)<br>
+                        <td style="vertical-align: middle;"> Ryuto Konno (リクルート)<br> Shun Kiyono (東北大; 理研)<br> Yuichiroh Matsubayashi (東北大; 理研)<br> Hiroki Ouchi (NAIST; 理研)<br> Kentaro Inui (東北大; 理研)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://aclanthology.org/2021.emnlp-main.308/">Pseudo Zero Pronoun Resolution Improves Zero Anaphora Resolution</a></td>
                     </tr>
@@ -843,7 +843,7 @@
                     <tr>
                         <td style="vertical-align: middle;">0</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Lya Hulliyyatus Suadaa (東工大)<br> Hidetaka Kamigaito (東工大)<br> Manabu Okumura (東工大)<br> Hiroya Takamura (東工大; 産総研)<br>
+                        <td style="vertical-align: middle;"> Lya Hulliyyatus Suadaa (東工大)<br> Hidetaka Kamigaito (東工大)<br> Manabu Okumura (東工大)<br> Hiroya Takamura (産総研; 東工大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/2021.eacl-main.267/">Metric-Type Identification for Multi-Level Header Numerical Tables in Scientific Papers</a></td>
                     </tr>
@@ -851,7 +851,7 @@
                     <tr>
                         <td style="vertical-align: middle;">0</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Diptesh Kanojia (IIT Bomday; モナシュ大; IITB-Monash Research Academy)<br> Prashant Sharma (日立)<br> Sayali Ghodekar (RingCentral)<br> Pushpak Bhattacharyya (IIT Bombay)<br> Gholamreza Haffari (モナシュ大)<br> Malhar Kulkarni (IIT Bombay)<br>
+                        <td style="vertical-align: middle;"> Diptesh Kanojia (モナシュ大; IIT Bomday; IITB-Monash Research Academy)<br> Prashant Sharma (日立)<br> Sayali Ghodekar (RingCentral)<br> Pushpak Bhattacharyya (IIT Bombay)<br> Gholamreza Haffari (モナシュ大)<br> Malhar Kulkarni (IIT Bombay)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/2021.eacl-main.288/">Cognition-aware Cognate Detection</a></td>
                     </tr>
@@ -859,7 +859,7 @@
                     <tr>
                         <td style="vertical-align: middle;">0</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Chenlong Hu (東工大)<br> Yukun Feng (東工大)<br> Hidetaka Kamigaito (東工大)<br> Hiroya Takamura (東工大; 産総研)<br> Manabu Okumura (東工大)<br>
+                        <td style="vertical-align: middle;"> Chenlong Hu (東工大)<br> Yukun Feng (東工大)<br> Hidetaka Kamigaito (東工大)<br> Hiroya Takamura (産総研; 東工大)<br> Manabu Okumura (東工大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/2021.eacl-main.296/">One-class Text Classification with Multi-modal Deep Support Vector Data Description</a></td>
                     </tr>
@@ -955,7 +955,7 @@
                     <tr>
                         <td style="vertical-align: middle;">0</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Jong-Hoon Oh (NICT)<br> Ryu Iida (NICT; NAIST)<br> Julien Kloetzer (NICT)<br> Kentaro Torisawa (NICT; NAIST)<br>
+                        <td style="vertical-align: middle;"> Jong-Hoon Oh (NICT)<br> Ryu Iida (NAIST; NICT)<br> Julien Kloetzer (NICT)<br> Kentaro Torisawa (NAIST; NICT)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://aclanthology.org/2021.acl-long.164/">BERTAC: Enhancing Transformer-based Language Models with Adversarially Pretrained Convolutional Neural Networks</a></td>
                     </tr>
@@ -1091,7 +1091,7 @@
                     <tr>
                         <td style="vertical-align: middle;">0</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Shun Kiyono (東北大; 理研)<br> Sosuke Kobayashi (東北大; PFN)<br> Jun Suzuki (東北大; 理研)<br> Kentaro Inui (東北大; 理研)<br>
+                        <td style="vertical-align: middle;"> Shun Kiyono (東北大; 理研)<br> Sosuke Kobayashi (PFN; 東北大)<br> Jun Suzuki (東北大; 理研)<br> Kentaro Inui (東北大; 理研)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://aclanthology.org/2021.emnlp-main.266/">SHAPE: Shifted Absolute Position Embedding for Transformers</a></td>
                     </tr>
@@ -1123,7 +1123,7 @@
                     <tr>
                         <td style="vertical-align: middle;">0</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> James O’Neill (リバプール大)<br> Polina Rozenshtein (Amazon)<br> Ryuichi Kiryo (Amazon)<br> Motoko Kubota (Amazon)<br> Danushka Bollegala (リバプール大; Amazon)<br>
+                        <td style="vertical-align: middle;"> James O’Neill (リバプール大)<br> Polina Rozenshtein (Amazon)<br> Ryuichi Kiryo (Amazon)<br> Motoko Kubota (Amazon)<br> Danushka Bollegala (Amazon; リバプール大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://aclanthology.org/2021.emnlp-main.568/">I Wish I Would Have Loved This One, But I Didn’t – A Multilingual Dataset for Counterfactual Detection in Product Review</a></td>
                     </tr>
@@ -1131,7 +1131,7 @@
                     <tr>
                         <td style="vertical-align: middle;">0</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Kazuaki Hanawa (東北大; 理研)<br> Ryo Nagata (JST; 甲南大)<br> Kentaro Inui (東北大; 理研)<br>
+                        <td style="vertical-align: middle;"> Kazuaki Hanawa (東北大; 理研)<br> Ryo Nagata (甲南大; JST)<br> Kentaro Inui (東北大; 理研)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://aclanthology.org/2021.emnlp-main.766/">Exploring Methods for Generating Feedback Comments for Writing Learning</a></td>
                     </tr>
