--- a/2019.html
+++ b/2019.html
@@ -16,7 +16,7 @@
     <div class="col-lg-auto">
 
         <h1>日本所属の言語処理論文被引用数ランキング (2019年)</h1>
-        <p class="text-right">最終更新: 2022-04-16 15:50:36.558068+09:00</p>
+        <p class="text-right">最終更新: 2022-04-16 16:05:33.054666+09:00</p>
 
         <div>
             <p>日本の組織を所属とする者が、2019年に言語処理のトップカンファレンスもしくはトップ論文誌で発表した論文一覧です (<a href="2021.html">2021年版</a>、<a
@@ -315,7 +315,7 @@
                     <tr>
                         <td style="vertical-align: middle;">76</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Richard Futrell (UC Irvine)<br> Ethan Wilcox (Harvard)<br> Takashi Morita (MIT; 京大)<br> Peng Qian (MIT)<br> Miguel Ballesteros (IBM)<br> Roger Levy (MIT)<br>
+                        <td style="vertical-align: middle;"> Richard Futrell (UC Irvine)<br> Ethan Wilcox (Harvard)<br> Takashi Morita (京大; MIT)<br> Peng Qian (MIT)<br> Miguel Ballesteros (IBM)<br> Roger Levy (MIT)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/N19-1004">Neural language models as psycholinguistic subjects: Representations of syntactic state</a></td>
                     </tr>
@@ -331,7 +331,7 @@
                     <tr>
                         <td style="vertical-align: middle;">63</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Shun Kiyono (東北大; 理研)<br> Jun Suzuki (理研; 東北大)<br> Masato Mita (東北大; 理研)<br> Tomoya Mizumoto (東北大; 理研)<br> Kentaro Inui (理研; 東北大)<br>
+                        <td style="vertical-align: middle;"> Shun Kiyono (東北大; 理研)<br> Jun Suzuki (東北大; 理研)<br> Masato Mita (東北大; 理研)<br> Tomoya Mizumoto (東北大; 理研)<br> Kentaro Inui (東北大; 理研)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/D19-1119">An Empirical Study of Incorporating Pseudo Data into Grammatical Error Correction</a></td>
                     </tr>
@@ -411,7 +411,7 @@
                     <tr>
                         <td style="vertical-align: middle;">32</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Hayate Iso (NAIST)<br> Yui Uehara (産総研)<br> Tatsuya Ishigaki (産総研; 東工大)<br> Hiroshi Noji (産総研)<br> Eiji Aramaki (産総研; NAIST)<br> Ichiro Kobayashi (産総研; お茶大)<br> Yusuke Miyao (産総研; 東大)<br> Naoaki Okazaki (産総研; 東工大)<br> Hiroya Takamura (産総研; 東工大)<br>
+                        <td style="vertical-align: middle;"> Hayate Iso (NAIST)<br> Yui Uehara (産総研)<br> Tatsuya Ishigaki (産総研; 東工大)<br> Hiroshi Noji (産総研)<br> Eiji Aramaki (産総研; NAIST)<br> Ichiro Kobayashi (お茶大; 産総研)<br> Yusuke Miyao (東大; 産総研)<br> Naoaki Okazaki (産総研; 東工大)<br> Hiroya Takamura (産総研; 東工大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/P19-1202">Learning to Select, Track, and Generate for Data-to-Text</a></td>
                     </tr>
@@ -467,7 +467,7 @@
                     <tr>
                         <td style="vertical-align: middle;">24</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Chung-Chi Chen (台湾大)<br> Hen-Hsen Huang (政治大; 台湾科技部)<br> Hiroya Takamura (産総研)<br> Hsin-Hsi Chen (台湾大; 台湾科技部)<br>
+                        <td style="vertical-align: middle;"> Chung-Chi Chen (台湾大)<br> Hen-Hsen Huang (台湾科技部; 政治大)<br> Hiroya Takamura (産総研)<br> Hsin-Hsi Chen (台湾大; 台湾科技部)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/P19-1635">Numeracy-600K: Learning Numeracy for Detecting Exaggerated Information in Market Comments</a></td>
                     </tr>
@@ -483,7 +483,7 @@
                     <tr>
                         <td style="vertical-align: middle;">23</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Xiaoyu Shen (ザールラント大; マックス・プランク情報学研究所)<br> Jun Suzuki (理研; 東北大)<br> Kentaro Inui (理研; 東北大)<br> Hui Su (テンセント)<br> Dietrich Klakow (ザールラント大)<br> Satoshi Sekine (理研)<br>
+                        <td style="vertical-align: middle;"> Xiaoyu Shen (マックス・プランク情報学研究所; ザールラント大)<br> Jun Suzuki (東北大; 理研)<br> Kentaro Inui (東北大; 理研)<br> Hui Su (テンセント)<br> Dietrich Klakow (ザールラント大)<br> Satoshi Sekine (理研)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/D19-1054">Select and Attend: Towards Controllable Content Selection in Text Generation</a></td>
                     </tr>
@@ -555,7 +555,7 @@
                     <tr>
                         <td style="vertical-align: middle;">17</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Motoki Sato (PFN)<br> Jun Suzuki (理研; 東北大)<br> Shun Kiyono (東北大; 理研)<br>
+                        <td style="vertical-align: middle;"> Motoki Sato (PFN)<br> Jun Suzuki (東北大; 理研)<br> Shun Kiyono (東北大; 理研)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/P19-1020">Effective Adversarial Regularization for Neural Machine Translation</a></td>
                     </tr>
@@ -571,7 +571,7 @@
                     <tr>
                         <td style="vertical-align: middle;">16</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Shonosuke Ishiwatari (東大)<br> Hiroaki Hayashi (CMU)<br> Naoki Yoshinaga (東大)<br> Graham Neubig (CMU)<br> Shoetsu Sato (東大)<br> Masashi Toyoda (東大)<br> Masaru Kitsuregawa (NII; 東大)<br>
+                        <td style="vertical-align: middle;"> Shonosuke Ishiwatari (東大)<br> Hiroaki Hayashi (CMU)<br> Naoki Yoshinaga (東大)<br> Graham Neubig (CMU)<br> Shoetsu Sato (東大)<br> Masashi Toyoda (東大)<br> Masaru Kitsuregawa (東大; NII)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/N19-1350">Learning to Describe Unknown Phrases with Local and Global Contexts</a></td>
                     </tr>
@@ -579,7 +579,7 @@
                     <tr>
                         <td style="vertical-align: middle;">16</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Takashi Wada (NAIST)<br> Tomoharu Iwata (NTT; 理研)<br> Yuji Matsumoto (NAIST; 理研)<br>
+                        <td style="vertical-align: middle;"> Takashi Wada (NAIST)<br> Tomoharu Iwata (理研; NTT)<br> Yuji Matsumoto (NAIST; 理研)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/P19-1300">Unsupervised Multilingual Word Embedding with Limited Resources using Neural Language Models</a></td>
                     </tr>
@@ -603,7 +603,7 @@
                     <tr>
                         <td style="vertical-align: middle;">14</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Tatsuki Kuribayashi (東北大)<br> Hiroki Ouchi (東北大; 理研)<br> Naoya Inoue (理研; 東北大)<br> Paul Reisert (東北大; 理研)<br> Toshinori Miyoshi (日立)<br> Jun Suzuki (理研; 東北大)<br> Kentaro Inui (理研; 東北大)<br>
+                        <td style="vertical-align: middle;"> Tatsuki Kuribayashi (東北大)<br> Hiroki Ouchi (東北大; 理研)<br> Naoya Inoue (東北大; 理研)<br> Paul Reisert (東北大; 理研)<br> Toshinori Miyoshi (日立)<br> Jun Suzuki (東北大; 理研)<br> Kentaro Inui (東北大; 理研)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/P19-1464">An Empirical Study of Span Representations in Argumentation Structure Parsing</a></td>
                     </tr>
@@ -627,7 +627,7 @@
                     <tr>
                         <td style="vertical-align: middle;">12</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Takuma Ebisu (NII; 総研大)<br> Ryutaro Ichise (産総研; NII; 総研大)<br>
+                        <td style="vertical-align: middle;"> Takuma Ebisu (NII; 総研大)<br> Ryutaro Ichise (産総研; 総研大; NII)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/N19-1104">Graph Pattern Entity Ranking Model for Knowledge Graph Completion</a></td>
                     </tr>
@@ -643,7 +643,7 @@
                     <tr>
                         <td style="vertical-align: middle;">12</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Taiki Watanabe (富士通研; 理研)<br> Akihiro Tamura (愛媛大; 理研)<br> Takashi Ninomiya (愛媛大; 理研)<br> Takuya Makino (富士通研; 理研)<br> Tomoya Iwakura (富士通研; 理研)<br>
+                        <td style="vertical-align: middle;"> Taiki Watanabe (富士通研; 理研)<br> Akihiro Tamura (理研; 愛媛大)<br> Takashi Ninomiya (理研; 愛媛大)<br> Takuya Makino (富士通研; 理研)<br> Tomoya Iwakura (富士通研; 理研)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/D19-1648">Multi-Task Learning for Chemical Named Entity Recognition with Chemical Compound Paraphrasing</a></td>
                     </tr>
@@ -667,7 +667,7 @@
                     <tr>
                         <td style="vertical-align: middle;">11</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Yang Zhao (東大)<br> Xiaoyu Shen (マックスプランク情報学研究所)<br> Wei Bi (Tencent)<br> Akiko Aizawa (NII; 東大)<br>
+                        <td style="vertical-align: middle;"> Yang Zhao (東大)<br> Xiaoyu Shen (マックスプランク情報学研究所)<br> Wei Bi (Tencent)<br> Akiko Aizawa (東大; NII)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/P19-1216">Unsupervised Rewriter for Multi-Sentence Compression</a></td>
                     </tr>
@@ -699,7 +699,7 @@
                     <tr>
                         <td style="vertical-align: middle;">9</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Masato Mita (東北大; 理研)<br> Tomoya Mizumoto (理研)<br> Masahiro Kaneko (首都大; 理研)<br> Ryo Nagata (甲南大; 理研)<br> Kentaro Inui (理研; 東北大)<br>
+                        <td style="vertical-align: middle;"> Masato Mita (東北大; 理研)<br> Tomoya Mizumoto (理研)<br> Masahiro Kaneko (理研; 首都大)<br> Ryo Nagata (甲南大; 理研)<br> Kentaro Inui (東北大; 理研)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/N19-1132">Cross-Corpora Evaluation and Analysis of Grammatical Error Correction Models — Is Single-Corpus Evaluation Enough?</a></td>
                     </tr>
@@ -731,7 +731,7 @@
                     <tr>
                         <td style="vertical-align: middle;">9</td>
                         <td style="vertical-align: middle;">STUDENT</td>
-                        <td style="vertical-align: middle;"> Farjana Sultana Mim (東北大)<br> Naoya Inoue (理研; 東北大)<br> Paul Reisert (東北大; 理研)<br> Hiroki Ouchi (東北大; 理研)<br> Kentaro Inui (理研; 東北大)<br>
+                        <td style="vertical-align: middle;"> Farjana Sultana Mim (東北大)<br> Naoya Inoue (東北大; 理研)<br> Paul Reisert (東北大; 理研)<br> Hiroki Ouchi (東北大; 理研)<br> Kentaro Inui (東北大; 理研)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/P19-2053">Unsupervised Learning of Discourse-Aware Text Representation for Essay Scoring</a></td>
                     </tr>
@@ -739,7 +739,7 @@
                     <tr>
                         <td style="vertical-align: middle;">8</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Shota Sasaki (東北大; 理研)<br> Jun Suzuki (理研; 東北大)<br> Kentaro Inui (理研; 東北大)<br>
+                        <td style="vertical-align: middle;"> Shota Sasaki (東北大; 理研)<br> Jun Suzuki (東北大; 理研)<br> Kentaro Inui (東北大; 理研)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/N19-1353">Subword-based Compact Reconstruction of Word Embeddings</a></td>
                     </tr>
@@ -747,7 +747,7 @@
                     <tr>
                         <td style="vertical-align: middle;">8</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Ryo Nagata (JST; 甲南大)<br>
+                        <td style="vertical-align: middle;"> Ryo Nagata (甲南大; JST)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/D19-1316">Toward a Task of Feedback Comment Generation for Writing Learning</a></td>
                     </tr>
@@ -755,7 +755,7 @@
                     <tr>
                         <td style="vertical-align: middle;">8</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Kazuma Kadowaki (NICT; 日本総研)<br> Ryu Iida (NICT; NAIST)<br> Kentaro Torisawa (NICT; NAIST)<br> Jong-Hoon Oh (NICT)<br> Julien Kloetzer (NICT)<br>
+                        <td style="vertical-align: middle;"> Kazuma Kadowaki (NICT; 日本総研)<br> Ryu Iida (NAIST; NICT)<br> Kentaro Torisawa (NAIST; NICT)<br> Jong-Hoon Oh (NICT)<br> Julien Kloetzer (NICT)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/D19-1590">Event Causality Recognition Exploiting Multiple Annotators’ Judgments and Background Knowledge</a></td>
                     </tr>
@@ -811,7 +811,7 @@
                     <tr>
                         <td style="vertical-align: middle;">6</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Jong-Hoon Oh (NICT)<br> Kazuma Kadowaki (NICT; 日本総研)<br> Julien Kloetzer (NICT)<br> Ryu Iida (NICT; NAIST)<br> Kentaro Torisawa (NICT; NAIST)<br>
+                        <td style="vertical-align: middle;"> Jong-Hoon Oh (NICT)<br> Kazuma Kadowaki (NICT; 日本総研)<br> Julien Kloetzer (NICT)<br> Ryu Iida (NAIST; NICT)<br> Kentaro Torisawa (NAIST; NICT)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/P19-1414">Open-Domain Why-Question Answering with Adversarial Learning to Encode Answer Texts</a></td>
                     </tr>
@@ -963,7 +963,7 @@
                     <tr>
                         <td style="vertical-align: middle;">3</td>
                         <td style="vertical-align: middle;">STUDENT</td>
-                        <td style="vertical-align: middle;"> Riko Suzuki (お茶大)<br> Hitomi Yanaka (理研; お茶大)<br> Masashi Yoshikawa (NAIST)<br> Koji Mineshima (お茶大)<br> Daisuke Bekki (お茶大)<br>
+                        <td style="vertical-align: middle;"> Riko Suzuki (お茶大)<br> Hitomi Yanaka (お茶大; 理研)<br> Masashi Yoshikawa (NAIST)<br> Koji Mineshima (お茶大)<br> Daisuke Bekki (お茶大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/P19-2054">Multimodal Logical Inference System for Visual-Textual Entailment</a></td>
                     </tr>
@@ -971,7 +971,7 @@
                     <tr>
                         <td style="vertical-align: middle;">3</td>
                         <td style="vertical-align: middle;">DEMO</td>
-                        <td style="vertical-align: middle;"> Masato Hagiwara (Octanove Labs)<br> Takumi Ito (Langsmith; 東北大)<br> Tatsuki Kuribayashi (Langsmith; 東北大)<br> Jun Suzuki (理研; 東北大)<br> Kentaro Inui (理研; 東北大)<br>
+                        <td style="vertical-align: middle;"> Masato Hagiwara (Octanove Labs)<br> Takumi Ito (東北大; Langsmith)<br> Tatsuki Kuribayashi (東北大; Langsmith)<br> Jun Suzuki (東北大; 理研)<br> Kentaro Inui (東北大; 理研)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/D19-3039">TEASPN: Framework and Protocol for Integrated Writing Assistance Environments</a></td>
                     </tr>
@@ -1011,7 +1011,7 @@
                     <tr>
                         <td style="vertical-align: middle;">2</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Hiroki Ouchi (東北大; 理研)<br> Jun Suzuki (理研; 東北大)<br> Kentaro Inui (理研; 東北大)<br>
+                        <td style="vertical-align: middle;"> Hiroki Ouchi (東北大; 理研)<br> Jun Suzuki (東北大; 理研)<br> Kentaro Inui (東北大; 理研)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/D19-1379">Transductive Learning of Neural Language Models for Syntactic and Semantic Analysis</a></td>
                     </tr>
@@ -1019,7 +1019,7 @@
                     <tr>
                         <td style="vertical-align: middle;">2</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Kurt Junshean Espinosa (マンチェスター大; フィリピン大セブ校)<br> Makoto Miwa (産総研; 豊田工大)<br> Sophia Ananiadou (マンチェスター大)<br>
+                        <td style="vertical-align: middle;"> Kurt Junshean Espinosa (フィリピン大セブ校; マンチェスター大)<br> Makoto Miwa (産総研; 豊田工大)<br> Sophia Ananiadou (マンチェスター大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/D19-1381">A Search-based Neural Model for Biomedical Nested and Overlapping Event Detection</a></td>
                     </tr>
@@ -1043,7 +1043,7 @@
                     <tr>
                         <td style="vertical-align: middle;">1</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Katsuhiko Hayashi (理研; 阪大)<br> Masashi Shimbo (NAIST; 理研)<br>
+                        <td style="vertical-align: middle;"> Katsuhiko Hayashi (阪大; 理研)<br> Masashi Shimbo (NAIST; 理研)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/D19-1246">A Non-commutative Bilinear Model for Answering Path Queries in Knowledge Graphs</a></td>
                     </tr>
